implemented menus, ability to end running questions

--- a/project.properties
+++ b/project.properties
@@ -11,7 +11,7 @@ JSR234: false
 JSR238: false
 JSR239: false
 JSR75: false
-MMAPI: true
+MMAPI: false
 SATSA-APDU: false
 SATSA-CRYPTO: false
 SATSA-JCRMI: false
